# CA_Cockpik_IC_HMI

./: .gitignore  CA_Cockpik_IC_HMI.qmlproject  CA_Cockpik_IC_HMI.qrc  CMakeLists.txt  README.md  qmlmodules
asset_imports/Quick3DAssets/: CMakeLists.txt
asset_imports/Quick3DAssets/Bar/: Bar.qml  CMakeLists.txt  _importdata.json  qmldir
asset_imports/Quick3DAssets/Bar/meshes/: speedMeter_Bar.mesh  speedMeter_Bar_Bg.mesh  tachMeter_Bar.mesh  tachMeter_Bar_Bg.mesh
asset_imports/Quick3DAssets/Bar/source scene/: Bar.FBX
asset_imports/Quick3DAssets/Car/: CMakeLists.txt  Car.qml  _importdata.json
asset_imports/Quick3DAssets/Car/_icons/: Car_libicon  Car_libicon@2x
asset_imports/Quick3DAssets/Car/meshes/: car.mesh
asset_imports/Quick3DAssets/Car/source scene/: Car.FBX
asset_imports/Quick3DAssets/Car1/: CMakeLists.txt  Car1.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Car1/meshes/: carBadge.mesh  carBody.mesh  carFrontLampBase.mesh  car_Bottom.mesh  car_Grill.mesh  car_HeadlightsGlass.mesh  car_Interior.mesh  car_Taillights.mesh  car_Wheels.mesh  car_Windows.mesh  iteration1_Car_Bumper.mesh  shadowplane.mesh
asset_imports/Quick3DAssets/Effect/: CMakeLists.txt  Effect.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Effect/meshes/: effect.mesh
asset_imports/Quick3DAssets/Effect/source scene/: Effect.FBX
asset_imports/Quick3DAssets/Lane/: CMakeLists.txt  Lane.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Lane/_icons/: Lane_libicon  Lane_libicon@2x
asset_imports/Quick3DAssets/Lane/meshes/: lane.mesh  lane_Outside.mesh
asset_imports/Quick3DAssets/Lane/source scene/: Lane.FBX
asset_imports/Quick3DAssets/Lane1/: CMakeLists.txt  Lane1.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Lane1/meshes/: lane1.mesh
asset_imports/Quick3DAssets/SpeedMeter/: CMakeLists.txt  SpeedMeter.qml  _importdata.json
asset_imports/Quick3DAssets/SpeedMeter/_icons/: SpeedMeter_libicon  SpeedMeter_libicon@2x
asset_imports/Quick3DAssets/TachMeter/: CMakeLists.txt  TachMeter.qml  _importdata.json
content/: AdasView.ui.qml  AdasView_Special.ui.qml  App.qml  CMakeLists.txt  DigitDisplay.ui.qml  InvertEffect.qml  MenuView.ui.qml  MenuView_Special.ui.qml  ProgressDisplay.ui.qml  Screen01.ui.qml  SpeedDial.ui.qml  TachoDial.ui.qml  WarningPopup.ui.qml
imports/: CMakeLists.txt
imports/CA_Cockpik_IC_HMI/: CMakeLists.txt  Constants.qml  qmldir
imports/CA_Cockpik_IC_HMI/designer/: plugin.metainfo
shader/: PBR_Car.frag.glsl  PBR_Car.vert.glsl  glow2.frag.glsl  glow2.vert.glsl  lanecurve.frag.glsl  lanecurve.vert.glsl  particle2.0.frag.glsl  particle2.0.vert.glsl
src/: adasdatamodel.cpp  adasdatamodel.h  datamodel.h  fpslabel.cpp  fpslabel.h  gaugedatamodel.cpp  gaugedatamodel.h  import_qml_plugins.h  main.cpp  statusdatamodel.cpp  statusdatamodel.h  telltaledatamodel.cpp  telltaledatamodel.h  tripcomputerdatamodel.cpp  tripcomputerdatamodel.h  warningdatamodel.cpp  warningdatamodel.h
src/win/: adasdatamodel.cpp  adasdatamodel.h  gaugedatamodel.cpp  gaugedatamodel.h  statusdatamodel.cpp  statusdatamodel.h  telltaledatamodel.cpp  telltaledatamodel.h  tripcomputerdatamodel.cpp  tripcomputerdatamodel.h  warningdatamodel.cpp  warningdatamodel.h
(+6 files in other folders)
